# optsam

./: .buildinfo  .gitignore  Makefile  README.md  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  index.doctree
.doctrees/examples/: NLP_sampling_example.doctree  compare_solvers.doctree  nlp_interface.doctree  test_problems.doctree
.doctrees/nbsphinx/examples/: test_problems.ipynb
.doctrees/nbsphinx/tutorials/: compare_solvers.ipynb
.doctrees/tutorials/: compare_solvers.doctree  nlp_interface.doctree  test_problems.doctree
.github/workflows/: docs.yml
docs/: conf.py  examples.md  index.md
examples/: Makefile  NLP_sampling_example.html  NLP_sampling_example.ipynb  compare_solvers.html  compare_solvers.ipynb  compare_solvers.py  nlp_interface.html  nlp_interface.py  test_problems.html  test_problems.ipynb  test_problems.py
main/: .buildinfo  index.html  objects.inv  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/genindex/: index.html
main/search/: index.html
src/optsam/: __init__.py
tutorials/: Makefile  NLP_sampling_example.py  benchmarks.py  compare_solvers.html  compare_solvers.ipynb  compare_solvers.py  nlp_interface.html  nlp_interface.ipynb  nlp_interface.py  test_problems.html  test_problems.py
